[package]
name         = "starknet-block-verifier"
authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }
repository   = { workspace = true }
readme       = "./../README.md"
keywords     = [ "starknet", "ibc", "light-client" ]
description  = "Starknet block header verifier"

[lints]
workspace = true

[dependencies]
serde           = { workspace = true }
starknet-core   = { workspace = true }
starknet-crypto = { workspace = true, optional = true }
ureq            = { workspace = true, optional = true, features = [ "json", "rustls" ] }

[dev-dependencies]
starknet                = { workspace = true }
serde_json              = { workspace = true }
rstest                  = { workspace = true }
starknet-block-verifier = { path = ".", features = [ "feeder", "crypto" ] }

[features]
feeder = [ "dep:ureq" ]
crypto = [ "dep:starknet-crypto" ]
