[package]
name         = "starknet-crypto-lib"
authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }
readme       = "./../README.md"
keywords     = [ "light-client", "starknet", "CosmWasm" ]
description  = "Starknet Crypto Library as Cosmwasm Smart Contract"

[lib]
crate-type = [ "cdylib", "rlib" ]

[lints]
workspace = true

[dependencies]
# cosmwasm dependencies
starknet-core   = { workspace = true }
starknet-crypto = { workspace = true }

sylvia          = { version = "1.3.6", optional = true, default-features = false }
cosmwasm-schema = { version = "2.2.2", optional = true }

[features]
cosmwasm = [ "dep:sylvia" ]
contract = [ "cosmwasm", "dep:cosmwasm-schema", "dep:sylvia" ]
