[package]
name         = "starknet-light-client-cw"
authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }
readme       = "./../README.md"
keywords     = [ "light-client", "starknet", "CosmWasm" ]
description  = "Starknet IBC wasm light-client"

[lib]
crate-type = [ "cdylib", "rlib" ]

[lints]
workspace = true

[dependencies]
# cosmwasm dependencies
starknet-block-verifier   = { workspace = true }
starknet-storage-verifier = { workspace = true }
starknet-core             = { workspace = true }

sylvia          = { version = "1.3" }
cosmwasm-schema = { version = "3.0" }
serde           = { version = "1.0", default-features = false, features = [ "derive" ] }
cosmwasm-std    = { version = "2.2", features = [ "staking" ] }

[features]
library = [  ]
