[package]
name         = "starknet-storage-verifier"
authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }
repository   = { workspace = true }
readme       = "./../README.md"
keywords     = [ "starknet", "ibc", "light-client" ]
description  = "Starknet storage verifier"

[lints]
workspace = true

[dependencies]
indexmap  = { workspace = true }
starknet  = { workspace = true }
thiserror = { workspace = true }
