[package]
name         = "starknet-storage-verifier"
authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }
repository   = { workspace = true }
readme       = "./../README.md"
keywords     = [ "starknet", "ibc", "light-client", "merkle-proof" ]
description  = "Starknet storage verifier"

[lints]
workspace = true

[dependencies]
# Internal dependencies
poseidon = { workspace = true }

# External dependencies
indexmap  = { workspace = true }
thiserror = { workspace = true }

# Ibc dependencies
ibc-core = { workspace = true, optional = true }

# Starknet dependencies
starknet-core   = { workspace = true }
starknet-crypto = { workspace = true }
starknet-macros = { workspace = true }

[dev-dependencies]
starknet                  = { version = "0.14.0" }
starknet-storage-verifier = { path = ".", features = [ "ibc" ] }

[features]
ibc = [ "dep:ibc-core" ]
