[package]
name         = "hermes-cairo-encoding-components"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"

[dependencies]
cgp-core                   = { workspace = true }
hermes-relayer-components  = { workspace = true }
hermes-encoding-components = { workspace = true }

starknet                    = { workspace = true }
