[package]
name         = "poseidon"
version      = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
keywords     = [ "poseidon", "hash", "cryptography", "starknet" ]
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
description  = "Poseidon hash function implementation for StarkNet"

[lints]
workspace = true

[dependencies]
starknet-types-core = { workspace = true }
sha2                = { workspace = true }
