[package]
name         = "hermes-starknet-chain-components"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"

[lints]
workspace = true

[dependencies]
cgp                                 = { workspace = true }
hermes-relayer-components           = { workspace = true }
hermes-test-components              = { workspace = true }
hermes-runtime-components           = { workspace = true }
hermes-async-runtime-components     = { workspace = true }
hermes-chain-components             = { workspace = true }
hermes-chain-type-components        = { workspace = true }
hermes-encoding-components          = { workspace = true }
hermes-cosmos-chain-components      = { workspace = true }
hermes-wasm-client-components       = { workspace = true }
hermes-cairo-encoding-components    = { workspace = true }
hermes-protobuf-encoding-components = { workspace = true }
hermes-cosmos-encoding-components   = { workspace = true }
hermes-wasm-encoding-components     = { workspace = true }

ibc       = { workspace = true }
ibc-proto = { workspace = true }

cairo-lang-starknet-classes = { workspace = true }
http                        = { workspace = true }
ibc-client-starknet-types   = { workspace = true }
prost-types                 = { workspace = true }
secp256k1                   = { workspace = true }
humantime-serde             = { workspace = true }
serde                       = { workspace = true }
serde_json                  = { workspace = true }
sha2                        = { workspace = true }
starknet                    = { workspace = true }
tonic                       = { workspace = true }
futures                     = { workspace = true }
time                        = { version = "0.3.36" }
crypto-bigint               = "0.5.5"
derive_more                 = { version = "2.0", features = [ "constructor", "deref", "display", "from", "from_str" ], default-features = false }

[dev-dependencies]
sha256 = { workspace = true }
hex    = { workspace = true }
