[package]
name         = "hermes-starknet-chain-components"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"

[lints]
workspace = true

[dependencies]
cgp                                 = { workspace = true }
hermes-prelude                      = { workspace = true }
hermes-core                         = { workspace = true }
hermes-cosmos-core                  = { workspace = true }
hermes-cairo-encoding-components    = { workspace = true }
poseidon                            = { workspace = true }

ibc        = { workspace = true }
ibc-proto  = { workspace = true }
tendermint = { workspace = true }

cairo-lang-starknet-classes = { workspace = true }
http                        = { workspace = true }
ibc-client-starknet-types   = { workspace = true }
prost-types                 = { workspace = true }
secp256k1                   = { workspace = true }
humantime-serde             = { workspace = true }
serde                       = { workspace = true }
serde_json                  = { workspace = true }
sha2                        = { workspace = true }
starknet                    = { workspace = true }
tonic                       = { workspace = true }
futures                     = { workspace = true }
reqwest                     = { workspace = true }
url                         = { workspace = true }
indexmap                    = { workspace = true }
time                        = { version = "0.3.36" }
crypto-bigint               = { version = "0.5.5" }
derive_more                 = { version = "2.0", features = [ "constructor", "deref", "display", "from", "from_str" ], default-features = false }

[dev-dependencies]
sha256 = { workspace = true }
hex    = { workspace = true }
