[package]
name         = "hermes-starknet-chain-components"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"

[lints]
workspace = true

[dependencies]
cgp                               = { workspace = true }
hermes-error                      = { workspace = true }
hermes-prelude                    = { workspace = true }
hermes-comet-light-client-context = { workspace = true }
hermes-core                       = { workspace = true }
hermes-cosmos-core                = { workspace = true }
hermes-cairo-encoding-components  = { workspace = true }
starknet-block-verifier           = { workspace = true, features = [ "feeder" ] }
starknet-storage-verifier         = { workspace = true, features = [ "ibc" ] }
starknet-crypto-lib               = { workspace = true }

ibc                              = { workspace = true }
ibc-client-tendermint            = { workspace = true }
ibc-proto                        = { workspace = true }
tendermint                       = { workspace = true }
tendermint-light-client-verifier = { workspace = true }
tendermint-rpc                   = { workspace = true }
tendermint-proto                 = { workspace = true }

cairo-lang-starknet-classes = { workspace = true }
crypto-bigint               = { version = "0.5.5" }
derive_more                 = { version = "2.0", features = [ "constructor", "deref", "display", "from", "from_str" ], default-features = false }
futures                     = { workspace = true }
garaga                      = { workspace = true }
http                        = { workspace = true }
humantime-serde             = { workspace = true }
ibc-client-starknet-types   = { workspace = true, features = [ "serde" ] }
indexmap                    = { workspace = true }
num-bigint                  = { version = "0.4" }
prost                       = { workspace = true }
prost-types                 = { workspace = true }
secp256k1                   = { workspace = true }
serde                       = { workspace = true }
serde_json                  = { workspace = true }
sha2                        = { workspace = true }
starknet                    = { workspace = true }
starknet-crypto             = { workspace = true }
time                        = { workspace = true }
tonic                       = { workspace = true }
ureq                        = { workspace = true }
url                         = { workspace = true }
rand                        = { workspace = true }

attestator = { workspace = true, features = [ "client" ] }

[dev-dependencies]
sha256 = { workspace = true }
hex    = { workspace = true }
