[package]
name         = "hermes-starknet-chain-context"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"

[lints]
workspace = true

[dependencies]
cgp                                 = { workspace = true }
ibc                                 = { workspace = true }
hermes-error                        = { workspace = true }
hermes-runtime                      = { workspace = true }
hermes-runtime-components           = { workspace = true }
hermes-async-runtime-components     = { workspace = true }
hermes-logging-components           = { workspace = true }
hermes-encoding-components          = { workspace = true }
hermes-logger                       = { workspace = true }
hermes-relayer-components           = { workspace = true }
hermes-test-components              = { workspace = true }
hermes-cosmos-chain-components      = { workspace = true }
hermes-wasm-client-components       = { workspace = true }
hermes-wasm-encoding-components     = { workspace = true }
hermes-starknet-chain-components    = { workspace = true }
hermes-chain-components             = { workspace = true }
hermes-chain-type-components        = { workspace = true }
hermes-cairo-encoding-components    = { workspace = true }
hermes-protobuf-encoding-components = { workspace = true }
hermes-starknet-test-components     = { workspace = true }
hermes-cosmos-relayer               = { workspace = true }

starknet                    = { workspace = true }
url                         = { workspace = true }
eyre                        = { workspace = true }
prost                       = { workspace = true }
serde_json                  = { workspace = true }
cairo-lang-starknet-classes = { workspace = true }
ibc-client-starknet-types   = { workspace = true }
