[package]
name         = "hermes-starknet-chain-context"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"

[lints]
workspace = true

[dependencies]
cgp                              = { workspace = true }
hermes-prelude                   = { workspace = true }
hermes-core                      = { workspace = true }
hermes-cosmos                    = { workspace = true }
ibc                              = { workspace = true }
hermes-starknet-chain-components = { workspace = true }
hermes-cairo-encoding-components = { workspace = true }
hermes-starknet-test-components  = { workspace = true }

starknet                    = { workspace = true }
starknet-v14                = { workspace = true }
futures                     = { workspace = true }
url                         = { workspace = true }
eyre                        = { workspace = true }
prost                       = { workspace = true }
serde_json                  = { workspace = true }
toml                        = { workspace = true }
cairo-lang-starknet-classes = { workspace = true }
ibc-client-starknet-types   = { workspace = true }
reqwest                     = { workspace = true }
indexmap                    = { workspace = true }
