[package]
name         = "hermes-starknet-cli"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
description  = "Hermes: IBC Relayer in Rust"

[lints]
workspace = true

[[bin]]
name = "hermes-starknet"
path = "bin/hermes_starknet.rs"

[dependencies]
cgp                               = { workspace = true }
cgp-error-eyre                    = { workspace = true }
hermes-prelude                    = { workspace = true }
hermes-core                       = { workspace = true }
hermes-cosmos                     = { workspace = true }
hermes-cosmos-core                = { workspace = true }
hermes-cli                        = { workspace = true }
hermes-cli-components             = { workspace = true }
hermes-starknet-chain-components  = { workspace = true }
hermes-starknet-chain-context     = { workspace = true }
hermes-starknet-relayer           = { workspace = true }
hermes-starknet-integration-tests = { workspace = true }
hermes-starknet-test-components   = { workspace = true }

ibc                 = { workspace = true }
starknet            = { workspace = true }
starknet-types-core = { workspace = true }

serde              = { workspace = true, features = [ "derive" ] }
serde_json         = { workspace = true }
clap               = { workspace = true, features = [ "derive" ] }
eyre               = { workspace = true }
toml               = { workspace = true }
hex                = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
stable-eyre        = { workspace = true }
humantime          = { workspace = true }

[dev-dependencies]
hex                     = { workspace = true }
hermes-chain-components = { workspace = true }
