[package]
name         = "hermes-starknet-integration-tests"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"

[lints]
workspace = true

[dependencies]
cgp                              = { workspace = true }
hermes-prelude                   = { workspace = true }
hermes-core                      = { workspace = true }
hermes-cosmos                    = { workspace = true }
hermes-cosmos-core               = { workspace = true }
hermes-ibc-test-suite            = { workspace = true }
hermes-starknet-chain-components = { workspace = true }
hermes-starknet-test-components  = { workspace = true }
hermes-starknet-chain-context    = { workspace = true }
hermes-starknet-relayer          = { workspace = true }

starknet-block-verifier = { workspace = true }

ibc            = { workspace = true }
ibc-proto      = { workspace = true }
tendermint-rpc = { workspace = true }

eyre        = { workspace = true }
flate2      = { workspace = true }
futures     = { workspace = true }
prost       = { workspace = true }
prost-types = { workspace = true }
rand        = { workspace = true }
sha2        = { workspace = true }
serde_json  = { workspace = true }
starknet    = { workspace = true }
tiny-bip39  = { workspace = true }
tokio       = { workspace = true }
toml        = { workspace = true }
tracing     = { workspace = true }
ureq        = { workspace = true }
url         = { workspace = true }

[dev-dependencies]
cairo-lang-starknet-classes = { workspace = true }
starknet-v14                = { workspace = true }
starknet-crypto-lib         = { workspace = true }
