[package]
name         = "hermes-starknet-madara-tests"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
cgp                              = { workspace = true }
hermes-prelude                   = { workspace = true }
hermes-core                      = { workspace = true }
hermes-cosmos-core               = { workspace = true }
hermes-error                     = { workspace = true }
hermes-runtime                   = { workspace = true }
hermes-ibc-test-suite            = { workspace = true }
hermes-cairo-encoding-components = { workspace = true }
hermes-starknet-chain-components = { workspace = true }
hermes-starknet-test-components  = { workspace = true }
hermes-starknet-chain-context    = { workspace = true }
poseidon                         = { workspace = true }

ibc                       = { workspace = true }
ibc-proto                 = { workspace = true }
tendermint-rpc            = { workspace = true }
ibc-client-starknet-types = { workspace = true }

starknet                    = { version = "0.14.0" }
starknet-v13                = { version = "0.13.0", package = "starknet" }
cairo-lang-starknet-classes = { workspace = true }
futures                     = { workspace = true }
url                         = { workspace = true }
eyre                        = { workspace = true }
tokio                       = { workspace = true }
serde                       = { workspace = true }
serde_json                  = { workspace = true }
rand                        = { workspace = true }
sha2                        = { workspace = true }
toml                        = { workspace = true }
prost                       = { workspace = true }
prost-types                 = { workspace = true }
tracing                     = { workspace = true }
flate2                      = { workspace = true }
tiny-bip39                  = { workspace = true }
reqwest                     = { workspace = true }
indexmap                    = { workspace = true }

tracing-subscriber = { version = "0.3.18", features = [ "env-filter" ] }
stable-eyre        = { version = "0.2.2" }
