[package]
name         = "hermes-starknet-madara-tests"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
hermes-prelude                    = { workspace = true }
hermes-core                       = { workspace = true }
hermes-cosmos                     = { workspace = true }
hermes-error                      = { workspace = true }
hermes-starknet-chain-components  = { workspace = true }
hermes-starknet-integration-tests = { workspace = true }
hermes-starknet-chain-context     = { workspace = true }

starknet-block-verifier = { workspace = true, features = [ "feeder" ] }

starknet     = { workspace = true }
starknet-v14 = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
