[package]
name         = "hermes-starknet-relayer"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"

[dependencies]
cgp                           = { workspace = true }
ibc                           = { workspace = true }
ibc-relayer-types             = { workspace = true }
hermes-error                  = { workspace = true }
hermes-runtime                = { workspace = true }
hermes-runtime-components     = { workspace = true }
hermes-logging-components     = { workspace = true }
hermes-encoding-components    = { workspace = true }
hermes-logger                 = { workspace = true }
hermes-relayer-components     = { workspace = true }
hermes-cosmos-relayer         = { workspace = true }
hermes-starknet-chain-context = { workspace = true }
