[package]
name         = "hermes-starknet-relayer"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"

[lints]
workspace = true

[dependencies]
cgp                               = { workspace = true }
ibc                               = { workspace = true }
hermes-prelude                    = { workspace = true }
hermes-core                       = { workspace = true }
hermes-cosmos                     = { workspace = true }
hermes-starknet-chain-context     = { workspace = true }
hermes-starknet-chain-components  = { workspace = true }

starknet = { workspace = true }

eyre    = { workspace = true }
serde   = { workspace = true }
url     = { workspace = true }
futures = { workspace = true }
toml    = { workspace = true }

tiny-bip39 = { workspace = true }
