[package]
name         = "hermes-starknet-test-components"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"

[lints]
workspace = true

[dependencies]
cgp                              = { workspace = true }
hermes-prelude                   = { workspace = true }
hermes-core                      = { workspace = true }
hermes-cosmos-core               = { workspace = true }
hermes-cairo-encoding-components = { workspace = true }
hermes-starknet-chain-components = { workspace = true }

starknet = { workspace = true }
serde    = { workspace = true }
toml     = { workspace = true }
